# caliptra-dpe

./: Cargo.toml  ci.sh
crypto/: build.rs
crypto/src/: hkdf.rs  lib.rs  ml_dsa.rs  openssl.rs  rustcrypto.rs  signer.rs
crypto/src/ecdsa/: curve_256.rs  curve_384.rs  mod.rs
dpe/: Cargo.toml  build.rs  x509_generator.rs
dpe/fuzz/: Cargo.toml
dpe/fuzz/src/: fuzz_target_1.rs
dpe/src/: asn1.rs  context.rs  dpe_instance.rs  lib.rs  response.rs  support.rs  tci.rs  validation.rs  x509.rs
dpe/src/commands/: certify_key.rs  derive_context.rs  destroy_context.rs  get_certificate_chain.rs  initialize_context.rs  mod.rs  rotate_context.rs  sign.rs
dpe/src/x509/: asn1.rs  mod.rs  x509.rs
platform/src/: lib.rs
simulator/src/: main.rs
tools/src/: sample_dpe_cert.rs
types/: Cargo.toml
types/src/: lib.rs
verification/client/: abi.go
verification/testing/: certifyKey.go  deriveContext.go  simulator.go  verification.go
