# Licensed under the Apache-2.0 license

[package]
authors.workspace = true
edition.workspace = true
license.workspace = true
name = "caliptra-dpe-types"
publish.workspace = true
version.workspace = true

[features]
default = ["p384"]
ml-dsa = ["caliptra-dpe-crypto/ml-dsa"]
p256 = []
p384 = []

[dependencies]
caliptra-dpe-crypto = { workspace = true, default-features = false }
caliptra-dpe-platform = { workspace = true, default-features = false }
zerocopy = { workspace = true }
zeroize = { workspace = true }
